# GameEngine

./: .gitignore  CMakeLists.txt
include/: Array.h  Displacement.h  Entity.h  Graphics.h  Material.h  Model.h  Shader.h  Texture.h  VertexArrayBuffer.h  Window.h  base_window.h  component.h  component_displacement.h  component_graphics.h  debug.h  gl_debug.h  material.h  mesh.h  model.h  obj_loader.h  renderer.h  shader.h  vertex_array_buffer.h  window.h
lib/stb/: stb.h  stb_c_lexer.h  stb_divide.h  stb_image.h  stb_image_write.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h  stb_vorbis.c  stb_voxel_render.h
lib/stb/deprecated/: stb_image.c
lib/stb/tests/: image_test.c  resample_test.cpp  stb.c  test_c_compilation.c
lib/stb/tests/caveview/: cave_mesher.c  cave_parse.c
lib/stb/tests/oversample/: main.c
lib/stb/tests/vorbseek/: vorbseek.c
other/: API-Discussion.txt  Shader-Math.txt  cache_alignment
res/shaders/: basic.glsl  basic.shader
src/: Entity.cpp  Entity.h  InputHandler.cpp  InputHandler.h  Loader.cpp  Loader.h  Material.cpp  Material.h  Model.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shader2.cpp  Shader2.h  Texture.cpp  Texture.h  VertexArrayBuffer.cpp  VertexArrayBuffer.h  Window.cpp  Window.h  debug.cpp  entity.cpp  gl_debug.cpp  gl_debug.h  main.cpp  material.cpp  mesh.cpp  model.cpp  obj_loader.cpp  renderer.cpp  shader.cpp  test.h  texture.cpp  vertex_array_buffer.cpp  window.cpp
src/Components/: Displacement.h  Graphics.h
src/math/: Matrix.cpp  Matrix.h
tests/: EntityTest.cpp  MatrixTest.h  TemporaryTest.cpp
tests/include/: CacheAlignment.h  EntityTest.h  TemporaryTest.h
tests/src/: CacheAlignment.cpp  EntityTest.cpp  MatrixTest.cpp  TemporaryTest.cpp  basic_check.cpp  mesh_test.cpp  obj_loader_test.cpp  window_test.cpp
